plugins {
  id 'application'
}

mainClassName = 'com.koval.jresolver.wizard.config.ConfigWizard'

sourceCompatibility = 8
targetCompatibility = 8

run {
  workingDir = file('src')
}

/*
startScripts {
  doLast {
    unixScript.text = unixScript.text.replace('DEFAULT_JVM_OPTS=',
        'DEFAULT_JVM_OPTS=--module-path $APP_HOME/lib/ --add-modules=javafx.controls')
    windowsScript.text = windowsScript.text.replace('set DEFAULT_JVM_OPTS=',
        'set DEFAULT_JVM_OPTS=--module-path %APP_HOME%\\lib\\ --add-modules=javafx.controls')
  }
}
*/
